# fragment-and-memory

./: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/: GranularApp.tsx  layout.tsx  page.tsx
public/: airwindows-reverb.worklet.js
src/: App.tsx  GranularApp.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/granular/: GranularLayout.tsx  Loader.tsx  NodeCanvas.tsx  ReverbControls.tsx  Slider.tsx  SoundControls.tsx  StackingMemoryPanel.tsx
src/granular/: audioExport.ts  domain.ts  types.ts
src/hooks/: useGranularApp.ts
src/theme/: ThemeProvider.tsx
